--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
         mnist:
         # replace username/repo:tag with your name and image details
-                image: fstcap/mnist:1.0
+                image: mnist:1.0
                 deploy:
                         replicas: 1
                         restart_policy:
@@ -13,10 +13,10 @@ services:
                                         memory: 15935M
                 ports:
                         - "80:80"
-                volumes:
-                        - .:/home/bruce/workspace/mnist
                 environment:
                         MNIST_ENV: development
+                volumes:
+                        - "/mnt/sda1/var/lib/docker/volumes/myvol/_data:/app/logs"
         visualizer:
                 image: dockersamples/visualizer:stable
                 ports:
@@ -28,16 +28,15 @@ services:
                                 constraints: [node.role == manager]
                 networks:
                         - webnet
-        redis:
-                image: redis
-                ports:
-                        - "6379:6379"
-                volumes:
-                        - "/home/docker/data:/data"
+        tensorboard:
+                image: fstcap/tensorboard:1.2
                 deploy:
                         placement:
                                 constraints: [node.role == manager]
-                command: redis-server --appendonly yes
+                ports:
+                        - "6006:6006"
+                volumes:
+                        - "/mnt/sda1/var/lib/docker/volumes/myvol/_data/scalars:/app/logs/scalars"
                 networks:
                         - webnet
 networks:
