--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,23 @@
-version: "3"
+version: "3.7"
 services:
         mnist:
         # replace username/repo:tag with your name and image details
-                image: mnist:1.0
-                deploy:
-                        replicas: 1
-                        restart_policy:
-                                condition: on-failure
-                        resources:
-                                limits:
-                                        cpus: "1"
-                                        memory: 15935M
-                ports:
-                        - "80:80"
+                build: .
                 environment:
-                        MNIST_ENV: development
+                        MODELS: "cnn"
+                        METHODS: "train"
                 volumes:
-                        - "/mnt/sda1/var/lib/docker/volumes/myvol/_data:/app/logs"
-        visualizer:
-                image: dockersamples/visualizer:stable
-                ports:
-                        - "8080:8080"
-                volumes:
-                        - "/var/run/docker.sock:/var/run/docker.sock"
-                deploy:
-                        placement:
-                                constraints: [node.role == manager]
-                networks:
-                        - webnet
+                        - data_volume:/app/logs
         tensorboard:
                 image: fstcap/tensorboard:1.2
-                deploy:
-                        placement:
-                                constraints: [node.role == manager]
                 ports:
                         - "6006:6006"
                 volumes:
-                        - "/mnt/sda1/var/lib/docker/volumes/myvol/_data/scalars:/app/logs/scalars"
+                        - data_volume:/app/logs
                 networks:
                         - webnet
 networks:
         webnet:
+
+volumes:
+        data_volume:
